--- a/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
+++ b/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
@@ -284,6 +284,8 @@ print(paste("Proportion in Training is", Training_Proportion_Check*100,"%", "and
 
 ### K-nearest neighbors with *k* = 3
 
+### Data Preprocessing 
+
 ```{r Preprocess for KNN}
 
 # Target Variable As Factor
@@ -294,6 +296,8 @@ UB_Validation$`Personal Loan` <- factor(UB_Validation$`Personal Loan`, levels = 
 # Education as Factor
 UB_Training$Education <- factor(UB_Training$Education)
 
+UB_Validation$Education <- factor(UB_Validation$Education)
+
 # Library Caret
 library(caret)
 
@@ -301,23 +305,113 @@ library(caret)
 dummy <- dummyVars(" ~ Education", data=UB_Training)
 Education_Dummy <- data.frame(predict(dummy, newdata = UB_Training)) 
 
+dummy_2 <- dummyVars(" ~ Education", data=UB_Validation)
+Education_Dummy_2 <- data.frame(predict(dummy, newdata = UB_Validation)) 
+
 # Remove Education and add hot-encoded dummies 
 UB_Training <- UB_Training[,-c("Education")]
 UB_Training <- cbind(UB_Training,Education_Dummy)
 
-# Preprocess the Data for KNN
+UB_Validation <- UB_Validation[,-c("Education")]
+UB_Validation <- cbind(UB_Validation,Education_Dummy_2)
+
+# Duplicate Dataset for Preprocess
+UB_Training_Preprocess <- UB_Training
+UB_Validation_Preprocess <- UB_Validation
+
+# Remove Dummies
+UB_Training_Preprocess <- UB_Training_Preprocess[,-c("Personal Loan","Online","CreditCard","Securities Account","CD Account","Education.1","Education.2","Education.3")]
+
+# Preprocess 
+norm_values <- preProcess(UB_Training_Preprocess,method = c("center","scale"))
+
+UB_Training_Preprocess <- predict(norm_values,UB_Training)
+UB_Validation_Preprocess <- predict(norm_values, UB_Validation)
 
 
 ```
 
 
+### Predictions and Confusion Matrix
+
+<center>
+
+```{r KNN and Confusion Matrix}
+
+# KNN Model using class package
+library(class)
+
+# Choosing our K value
+k <- 3
+
+# KNN
+Predictions_KNN_Training <- knn(train=UB_Training_Preprocess[,-c("Personal Loan")], test = UB_Validation_Preprocess[,-c("Personal Loan")], cl = UB_Training_Preprocess$`Personal Loan`, k=k)
+
+# Confusion Matrix
+Confusion_Matrix_KNN <- confusionMatrix(data = Predictions_KNN_Training, reference = UB_Validation$`Personal Loan`)
+
+Confusion_Matrix_KNN
+
+# Create the Function for Confusion Matrix
+draw_confusion_matrix_KNN <- function(cm) {
+
+  layout(matrix(c(1,1,2)))
+  par(mar=c(2,2,2,2))
+  plot(c(100, 345), c(300, 450), type = "n", xlab="", ylab="", xaxt='n', yaxt='n')
+  title('CONFUSION MATRIX for KNN with k=3', cex.main=2)
+
+  # create the matrix 
+  rect(150, 430, 240, 370, col='#1c6155')
+  text(195, 435, 'No Loan', cex=1.2)
+  rect(250, 430, 340, 370, col='#1c615570')
+  text(295, 435, 'Loan', cex=1.2)
+  text(125, 370, 'Predicted', cex=1.3, srt=90, font=2)
+  text(245, 450, 'Actual', cex=1.3, font=2)
+  rect(150, 305, 240, 365, col='#1c615570')
+  rect(250, 305, 340, 365, col='#1c6155')
+  text(140, 400, 'No Loan', cex=1.2, srt=90)
+  text(140, 335, 'Loan', cex=1.2, srt=90)
+
+  # add in the cm results 
+  res <- as.numeric(cm$table)
+  text(195, 400, res[1], cex=1.6, font=2, col='white')
+  text(195, 335, res[2], cex=1.6, font=2, col='white')
+  text(295, 400, res[3], cex=1.6, font=2, col='white')
+  text(295, 335, res[4], cex=1.6, font=2, col='white')
+
+  # add in the specifics 
+  plot(c(100, 0), c(100, 0), type = "n", xlab="", ylab="", main = "DETAILS", xaxt='n', yaxt='n')
+  text(10, 85, names(cm$byClass[1]), cex=1.2, font=2)
+  text(10, 70, round(as.numeric(cm$byClass[1]), 3), cex=1.2)
+  text(30, 85, names(cm$byClass[2]), cex=1.2, font=2)
+  text(30, 70, round(as.numeric(cm$byClass[2]), 3), cex=1.2)
+  text(50, 85, names(cm$byClass[5]), cex=1.2, font=2)
+  text(50, 70, round(as.numeric(cm$byClass[5]), 3), cex=1.2)
+  text(70, 85, names(cm$byClass[6]), cex=1.2, font=2)
+  text(70, 70, round(as.numeric(cm$byClass[6]), 3), cex=1.2)
+  text(90, 85, names(cm$byClass[7]), cex=1.2, font=2)
+  text(90, 70, round(as.numeric(cm$byClass[7]), 3), cex=1.2)
+
+  # add in the accuracy information 
+  text(30, 35, names(cm$overall[1]), cex=1.5, font=2)
+  text(30, 20, round(as.numeric(cm$overall[1]), 3), cex=1.4)
+  text(70, 35, names(cm$overall[2]), cex=1.5, font=2)
+  text(70, 20, round(as.numeric(cm$overall[2]), 3), cex=1.4)
+}
+
+# Plot the Confusion Matrix
+draw_confusion_matrix_KNN(Confusion_Matrix_KNN)
+
+```
+
+</center>
+
+> Comments:
 
 
 ### Classification tress
 
 ```{r CT}
-
-
 
 
 
