--- a/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
+++ b/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
@@ -218,8 +218,8 @@ rm(list = ls())
 # Loading Universal.csv
 UniversalBank <- fread("data/UniversalBank.csv")
 
-# Removing ZIP Code
-UniversalBank <- UniversalBank[,-c("ZIP Code")]
+# Removing ZIP Code and ID
+UniversalBank <- UniversalBank[,-c("ZIP Code","ID")]
 
 
 ```
@@ -261,27 +261,115 @@ print(paste("Proportion in Training is", Training_Proportion_Check*100,"%", "and
 
 ```{r LR}
 
+# Set Seed 
+set.seed(1)
 
+# Duplicate the UniversalBank
+LR_Training <- UB_Training
+LR_Validation <- UB_Validation
 
+# Target Variable As Factor
+LR_Training$`Personal Loan` <- factor(LR_Training$`Personal Loan`, levels = c(0,1),labels = c("No Loan","Loan")) 
+LR_Validation$`Personal Loan` <- factor(LR_Validation$`Personal Loan`, levels = c(0,1),labels = c("No Loan","Loan"))
 
+# Factor Education
+LR_Training$Education <- factor(LR_Training$Education, levels = c(1, 2, 3), labels = c("Undergrad", "Graduate", "Advanced/Professional"))
+LR_Validation$Education <- factor(LR_Validation$Education, levels = c(1, 2, 3), labels = c("Undergrad", "Graduate", "Advanced/Professional"))
 
+# Run logistic regression
+logit.reg <- glm(`Personal Loan` ~ ., data = LR_Training, family = "binomial")
 
+options(scipen=999)
 
-
-
-
+summary(logit.reg)
 
 
 ```
 
 
+### Predictions and Confusion Matrix
 
 
+<center>
 
+```{r LR Predictions and Confusion Matrix}
 
+# Set Seed 
+set.seed(1)
 
+# Predictions with LR
+logit.reg.pred <- predict(logit.reg, LR_Validation[, -c("`Personal Loan`")], type = "response")
 
+# Rounding Predictions - 0.5 Threshold
+logit.reg.pred_round <- round(logit.reg.pred)
 
+# As Numeric
+logit.reg.pred_round <- as.numeric(logit.reg.pred_round)
+
+# Check rounding
+dataframe_predictions <- cbind(logit.reg.pred, logit.reg.pred_round)
+
+# Predictions as Factor
+logit.reg.pred_round <- factor(logit.reg.pred_round, levels = c(0,1),labels = c("No Loan","Loan"))
+
+# Confusion Matrix
+Confusion_Matrix_LR <- confusionMatrix(data = logit.reg.pred_round, reference = LR_Validation$`Personal Loan`)
+
+# Create the Function for Confusion Matrix
+draw_confusion_matrix_LR <- function(cm) {
+
+  layout(matrix(c(1,1,2)))
+  par(mar=c(2,2,2,2))
+  plot(c(100, 345), c(300, 450), type = "n", xlab="", ylab="", xaxt='n', yaxt='n')
+  title('CONFUSION MATRIX for Logistic Regression', cex.main=2)
+
+  # create the matrix 
+  rect(150, 430, 240, 370, col='#1c6155')
+  text(195, 435, 'No Loan', cex=1.2)
+  rect(250, 430, 340, 370, col='#1c615570')
+  text(295, 435, 'Loan', cex=1.2)
+  text(125, 370, 'Predicted', cex=1.3, srt=90, font=2)
+  text(245, 450, 'Actual', cex=1.3, font=2)
+  rect(150, 305, 240, 365, col='#1c615570')
+  rect(250, 305, 340, 365, col='#1c6155')
+  text(140, 400, 'No Loan', cex=1.2, srt=90)
+  text(140, 335, 'Loan', cex=1.2, srt=90)
+
+  # add in the cm results 
+  res <- as.numeric(cm$table)
+  text(195, 400, res[1], cex=1.6, font=2, col='white')
+  text(195, 335, res[2], cex=1.6, font=2, col='white')
+  text(295, 400, res[3], cex=1.6, font=2, col='white')
+  text(295, 335, res[4], cex=1.6, font=2, col='white')
+
+  # add in the specifics 
+  plot(c(100, 0), c(100, 0), type = "n", xlab="", ylab="", main = "DETAILS", xaxt='n', yaxt='n')
+  text(10, 85, names(cm$byClass[1]), cex=1.2, font=2)
+  text(10, 70, round(as.numeric(cm$byClass[1]), 3), cex=1.2)
+  text(30, 85, names(cm$byClass[2]), cex=1.2, font=2)
+  text(30, 70, round(as.numeric(cm$byClass[2]), 3), cex=1.2)
+  text(50, 85, names(cm$byClass[5]), cex=1.2, font=2)
+  text(50, 70, round(as.numeric(cm$byClass[5]), 3), cex=1.2)
+  text(70, 85, names(cm$byClass[6]), cex=1.2, font=2)
+  text(70, 70, round(as.numeric(cm$byClass[6]), 3), cex=1.2)
+  text(90, 85, names(cm$byClass[7]), cex=1.2, font=2)
+  text(90, 70, round(as.numeric(cm$byClass[7]), 3), cex=1.2)
+
+  # add in the accuracy information 
+  text(30, 35, names(cm$overall[1]), cex=1.5, font=2)
+  text(30, 20, round(as.numeric(cm$overall[1]), 3), cex=1.4)
+  text(70, 35, names(cm$overall[2]), cex=1.5, font=2)
+  text(70, 20, round(as.numeric(cm$overall[2]), 3), cex=1.4)
+}
+
+# Plot the Confusion Matrix
+draw_confusion_matrix_LR(Confusion_Matrix_LR)
+
+```
+
+</center>
+
+> Comments:
 
 
 ### K-nearest neighbors with *k* = 3
@@ -289,6 +377,9 @@ print(paste("Proportion in Training is", Training_Proportion_Check*100,"%", "and
 ### Data Preprocessing 
 
 ```{r Preprocess for KNN}
+
+# Set Seed 
+set.seed(1)
 
 # Target Variable As Factor
 UB_Training$`Personal Loan` <- factor(UB_Training$`Personal Loan`, levels = c(0,1),labels = c("No Loan","Loan")) 
@@ -339,6 +430,9 @@ UB_Validation_Preprocess <- predict(norm_values, UB_Validation)
 <center>
 
 ```{r KNN and Confusion Matrix}
+
+# Set Seed 
+set.seed(1)
 
 # KNN Model using class package
 library(class)
@@ -417,7 +511,6 @@ draw_confusion_matrix_KNN(Confusion_Matrix_KNN)
 
 ```{r CT}
 
-
 # Set Seed 
 set.seed(1)
 
@@ -435,6 +528,7 @@ CT_Plot <- rpart.plot(CT, type=0, varlen = 0, box.col=ifelse(CT$frame$var == "<l
 
 </center>
 
+# Predictions and Confusion Matrix
 
 <center>
 
@@ -502,8 +596,10 @@ draw_confusion_matrix_CT(Confusion_Matrix_CT)
 
 ```
 
-
 </center>
+
+> Comments:
+
 
 
 # <span style="color: #1c6155;">Ex 13.2</span> 
