--- a/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
+++ b/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
@@ -443,6 +443,13 @@ k <- 3
 # KNN
 Predictions_KNN_Training <- knn(train=UB_Training_Preprocess[,-c("Personal Loan")], test = UB_Validation_Preprocess[,-c("Personal Loan")], cl = UB_Training_Preprocess$`Personal Loan`, k=k, prob = TRUE)
 
+# KNN Probabilities output
+Predictions_KNN_Training_Proba <- attributes(Predictions_KNN_Training)$prob
+Predictions_KNN_Training_Proba <- as.data.frame(Predictions_KNN_Training_Proba)
+
+# Change 1 to 0 since 1 is for Dummy == No Loan not Loan
+Predictions_KNN_Training_Proba[Predictions_KNN_Training_Proba == 1] <- 0
+
 # Confusion Matrix
 Confusion_Matrix_KNN <- confusionMatrix(data = Predictions_KNN_Training, reference = UB_Validation$`Personal Loan`)
 
@@ -767,8 +774,11 @@ All_Models_Predictions$Average <- NA
 
 # Average Vote
 for(i in 1:nrow(All_Models_Predictions)){
-  All_Models_Predictions$Average[i] =  sum(CT_Predictions_Proba[i,2], logit.reg.pred[i])/2
+  All_Models_Predictions$Average[i] =  (CT_Predictions_Proba[i,2] + logit.reg.pred[i] + Predictions_KNN_Training_Proba[i,1])/3
 }
+
+# Round Average Vote to 4th Decimals
+All_Models_Predictions$Average <- round(All_Models_Predictions[,6],4)
 
 # Show Average Column with Probabilities
 DT::datatable(All_Models_Predictions, caption = "Predicted VS Actual Loan in Validation (Average Probabilities Added) - 3 Models") 
@@ -855,7 +865,7 @@ draw_confusion_matrix_Average(Confusion_Matrix_Average)
 
 </center>
 
-> Comments: We can see that this method of Averaging predicted probabilities gave us an accuracy of 98.3% which is slightly better than the Classification Trees Model (CT had an accuracy of 98.2%), and also better than Majority of Votes. 
+> Comments: 
 
 ## d. Compare Error Rates for the 3 individuals methods and the 2 ensemble methods. 
 
@@ -878,13 +888,20 @@ Error_Rates_DF <- cbind(Error_LR,Error_KNN,Error_CT,Error_Majority,Error_Average
 # Rounding up to 5 decimals
 Error_Rates_DF <- round(Error_Rates_DF,3)
 
-DT::datatable(Error_Rates_DF, caption = "Error Rates from 3 Individual Method and 2 Ensembles Method") 
+DT::datatable(Error_Rates_DF, caption = "Error Rates from 3 Individual Methods and 2 Ensembles Methods") 
 
 ```
 
-> Comments: The Smallest Error Rate is from the Average Predicted Probabilities (Ensemble Method), while the biggest is from the Logistic Regression (Individual Method)
+> Comments: 
 
 # <span style="color: #1c6155;">Ex 13.2</span> 
+
+```{r clean environment 3, include=FALSE}
+
+# Clean Environment
+rm(list = ls()) 
+
+```
 
 
 
