--- a/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
+++ b/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
@@ -211,7 +211,7 @@ rm(list = ls())
 
 ```
 
-
+## Acceptance of Consumer Loan
 
 ```{r loading UniversalBank}
 
@@ -220,7 +220,6 @@ UniversalBank <- fread("data/UniversalBank.csv")
 
 # Removing ZIP Code and ID
 UniversalBank <- UniversalBank[,-c("ZIP Code","ID")]
-
 
 ```
 
@@ -519,14 +518,14 @@ draw_confusion_matrix_KNN(Confusion_Matrix_KNN)
 # Set Seed 
 set.seed(1)
 
-# Regression Tree Packages
+# Tree Packages
 library(rpart)
 library(rpart.plot)
 
-# Running Regression Tree
+# Running Tree
 CT <- rpart(UB_Training$`Personal Loan` ~ . , data=UB_Training)
 
-# Plotting Regression Tree
+# Plotting Tree
 CT_Plot <- rpart.plot(CT, type=0, varlen = 0, box.col=ifelse(CT$frame$var == "<leaf>", '#8db0aa', 'white'), fallen.leaves = FALSE, extra = FALSE, main="Classification Trees", cex.main=1.5)
 
 ```
@@ -903,11 +902,313 @@ rm(list = ls())
 
 ```
 
+## eBay Auctions - Boosting and Bagging
+
+```{r loading eBay Auctions 2}
+
+# Loading eBay Auctions
+eBayAuction_DF <- fread("data/eBayAuctions.csv")
+
+```
+
+## Partition the data: 60% training, 40% validation.
+
+```{r partition the data 2}
+
+# Setting Seed
+set.seed(1)
+
+# Training and Validation Proportion
+Training_Proportion <- 0.6
+Validation_Proportion <- 1-Training_Proportion
+
+# Splitting
+sample <- sample(c(TRUE, FALSE), nrow(eBayAuction_DF), replace=TRUE, prob=c(Training_Proportion,Validation_Proportion))
+
+EB_Training  <- eBayAuction_DF[sample, ]
+
+EB_Validation   <- eBayAuction_DF[!sample, ]
+
+# Checking Proportions
+Training_Proportion_Check <- nrow(EB_Training)/nrow(eBayAuction_DF)
+Validation_Proportion_Check <- nrow(EB_Validation)/nrow(eBayAuction_DF)
+
+# Printing Result Check
+print(paste("Proportion in Training is", round(Training_Proportion_Check*100),"%", "and in Validation is",round(Validation_Proportion_Check*100),"%"))
+
+```
+
+## a. Run a Classification Tree, using default controls of rpart()
+
+### Actual VS Predictions
+
+```{r CT and Validation Set Accuracy}
+
+# Set Seed 
+set.seed(1)
+
+# Tree Packages
+library(rpart)
+library(rpart.plot)
+
+# Duplicate before Factor
+EB_Training_Pure <- EB_Training
+EB_Validation_Pure <- EB_Validation
+
+# Factor for outcome variable 
+EB_Training$`Competitive?` <- factor(EB_Training$`Competitive?`, levels = c(0,1),labels = c("No","Yes")) 
+EB_Validation$`Competitive?` <- factor(EB_Validation$`Competitive?`, levels = c(0,1),labels = c("No","Yes")) 
+
+# Running Classification Tree
+CT <- rpart(EB_Training$`Competitive?` ~ . , data=EB_Training)
+
+# Predict for Validation Set with CT
+CT_Predictions <- predict(CT, EB_Validation, type = 'class')
+CT_Predictions_Prob <- predict(CT, EB_Validation, type = 'prob')
+
+# Check Actual VS Predicted
+Predictions_Actual_CT <- data.frame(EB_Validation$`Competitive?`,CT_Predictions)
+
+# Renaming Columns
+colnames(Predictions_Actual_CT)[2] <- "Predicted"
+colnames(Predictions_Actual_CT)[1] <- "Actual"
+
+# Render Table
+DT::datatable(Predictions_Actual_CT, caption = "Actual VS Predicted with Default Classification Trees") 
+
+```
+<center>
+
+### Confusion Matrix
+
+```{r Accuracy and Confusion Matrix CT}
+
+# Confusion Matrix
+Confusion_Matrix_CT_2 <- confusionMatrix(data = CT_Predictions, reference = EB_Validation$`Competitive?`)
+
+# Create the Function for Confusion Matrix
+draw_confusion_matrix_CT_2 <- function(cm) {
+
+  layout(matrix(c(1,1,2)))
+  par(mar=c(2,2,2,2))
+  plot(c(100, 345), c(300, 450), type = "n", xlab="", ylab="", xaxt='n', yaxt='n')
+  title('CONFUSION MATRIX for Default Classification Trees', cex.main=2)
+
+  # create the matrix 
+  rect(150, 430, 240, 370, col='#1c6155')
+  text(195, 435, 'No', cex=1.2)
+  rect(250, 430, 340, 370, col='#1c615570')
+  text(295, 435, 'Yes', cex=1.2)
+  text(125, 370, 'Predicted', cex=1.3, srt=90, font=2)
+  text(245, 450, 'Actual', cex=1.3, font=2)
+  rect(150, 305, 240, 365, col='#1c615570')
+  rect(250, 305, 340, 365, col='#1c6155')
+  text(140, 400, 'No', cex=1.2, srt=90)
+  text(140, 335, 'Yes', cex=1.2, srt=90)
+
+  # add in the cm results 
+  res <- as.numeric(cm$table)
+  text(195, 400, res[1], cex=1.6, font=2, col='white')
+  text(195, 335, res[2], cex=1.6, font=2, col='white')
+  text(295, 400, res[3], cex=1.6, font=2, col='white')
+  text(295, 335, res[4], cex=1.6, font=2, col='white')
+
+  # add in the specifics 
+  plot(c(100, 0), c(100, 0), type = "n", xlab="", ylab="", main = "DETAILS", xaxt='n', yaxt='n')
+  text(10, 85, names(cm$byClass[1]), cex=1.2, font=2)
+  text(10, 70, round(as.numeric(cm$byClass[1]), 3), cex=1.2)
+  text(30, 85, names(cm$byClass[2]), cex=1.2, font=2)
+  text(30, 70, round(as.numeric(cm$byClass[2]), 3), cex=1.2)
+  text(50, 85, names(cm$byClass[5]), cex=1.2, font=2)
+  text(50, 70, round(as.numeric(cm$byClass[5]), 3), cex=1.2)
+  text(70, 85, names(cm$byClass[6]), cex=1.2, font=2)
+  text(70, 70, round(as.numeric(cm$byClass[6]), 3), cex=1.2)
+  text(90, 85, names(cm$byClass[7]), cex=1.2, font=2)
+  text(90, 70, round(as.numeric(cm$byClass[7]), 3), cex=1.2)
+
+  # add in the accuracy information 
+  text(30, 35, names(cm$overall[1]), cex=1.5, font=2)
+  text(30, 20, round(as.numeric(cm$overall[1]), 3), cex=1.4)
+  text(70, 35, names(cm$overall[2]), cex=1.5, font=2)
+  text(70, 20, round(as.numeric(cm$overall[2]), 3), cex=1.4)
+}
+
+# Plot the Confusion Matrix
+draw_confusion_matrix_CT_2(Confusion_Matrix_CT_2)
+
+```
+
+</center>
+
+> Comments: The Overall Accuracy is 0.81 for this Default Classification Trees.
 
 
+### Decile Lift Chart
+
+```{r decile lift chart}
+
+# Load Gains
+library(gains)
+
+# Compute Gains Chart
+gain <- gains(EB_Validation_Pure$`Competitive?`, CT_Predictions_Prob[,2])
+barplot(gain$mean.resp / mean(EB_Validation_Pure$`Competitive?`), names.arg = gain$depth, xlab = "Percentile",
+ylab = "Mean Response", main = "Decile-wise lift chart", col = "#1c6155")
+
+```
+
+## b. Run a boosted tree with the same predictors
+
+```{r boosting Trees}
+
+library(adabag)
+
+Model_Boost <- boosting(`Competitive?` ~ ., data = EB_Training)
+
+Prediction_Boost <- predict(Model_Boost, EB_Validation)
+
+```
+
+## c. Run a bagged tree with the same predictors
+
+<center>
+
+```{r bagged Trees}
+
+library(adabag)
+
+bag <- bagging(`Competitive?` ~ ., data = EB_Training) 
+
+Prediction_Bagging <- predict(bag, EB_Validation)
+
+# Confusion Matrix
+Confusion_Matrix_BT <- confusionMatrix(data = Prediction_RF, reference = EB_Validation$`Competitive?`)
+
+# Create the Function for Confusion Matrix
+draw_confusion_matrix_BT <- function(cm) {
+
+  layout(matrix(c(1,1,2)))
+  par(mar=c(2,2,2,2))
+  plot(c(100, 345), c(300, 450), type = "n", xlab="", ylab="", xaxt='n', yaxt='n')
+  title('CONFUSION MATRIX for Bagged Tree', cex.main=2)
+
+  # create the matrix 
+  rect(150, 430, 240, 370, col='#1c6155')
+  text(195, 435, 'No', cex=1.2)
+  rect(250, 430, 340, 370, col='#1c615570')
+  text(295, 435, 'Yes', cex=1.2)
+  text(125, 370, 'Predicted', cex=1.3, srt=90, font=2)
+  text(245, 450, 'Actual', cex=1.3, font=2)
+  rect(150, 305, 240, 365, col='#1c615570')
+  rect(250, 305, 340, 365, col='#1c6155')
+  text(140, 400, 'No', cex=1.2, srt=90)
+  text(140, 335, 'Yes', cex=1.2, srt=90)
+
+  # add in the cm results 
+  res <- as.numeric(cm$table)
+  text(195, 400, res[1], cex=1.6, font=2, col='white')
+  text(195, 335, res[2], cex=1.6, font=2, col='white')
+  text(295, 400, res[3], cex=1.6, font=2, col='white')
+  text(295, 335, res[4], cex=1.6, font=2, col='white')
+
+  # add in the specifics 
+  plot(c(100, 0), c(100, 0), type = "n", xlab="", ylab="", main = "DETAILS", xaxt='n', yaxt='n')
+  text(10, 85, names(cm$byClass[1]), cex=1.2, font=2)
+  text(10, 70, round(as.numeric(cm$byClass[1]), 3), cex=1.2)
+  text(30, 85, names(cm$byClass[2]), cex=1.2, font=2)
+  text(30, 70, round(as.numeric(cm$byClass[2]), 3), cex=1.2)
+  text(50, 85, names(cm$byClass[5]), cex=1.2, font=2)
+  text(50, 70, round(as.numeric(cm$byClass[5]), 3), cex=1.2)
+  text(70, 85, names(cm$byClass[6]), cex=1.2, font=2)
+  text(70, 70, round(as.numeric(cm$byClass[6]), 3), cex=1.2)
+  text(90, 85, names(cm$byClass[7]), cex=1.2, font=2)
+  text(90, 70, round(as.numeric(cm$byClass[7]), 3), cex=1.2)
+
+  # add in the accuracy information 
+  text(30, 35, names(cm$overall[1]), cex=1.5, font=2)
+  text(30, 20, round(as.numeric(cm$overall[1]), 3), cex=1.4)
+  text(70, 35, names(cm$overall[2]), cex=1.5, font=2)
+  text(70, 20, round(as.numeric(cm$overall[2]), 3), cex=1.4)
+}
+
+# Plot the Confusion Matrix
+draw_confusion_matrix_BT(Confusion_Matrix_BT)
 
 
+```
 
+</center>
+
+## d. Run a random forest with argument mtry = 4
+
+<center>
+
+```{r random forest}
+
+library(randomForest)
+
+Random_Forest <- randomForest(EB_Training$`Competitive?` ~ ., data = EB_Training, mtry = 4)
+
+Prediction_RF <- predict(Random_Forest, EB_Validation)
+
+# Confusion Matrix
+Confusion_Matrix_RF <- confusionMatrix(data = Prediction_RF, reference = EB_Validation$`Competitive?`)
+
+# Create the Function for Confusion Matrix
+draw_confusion_matrix_RF <- function(cm) {
+
+  layout(matrix(c(1,1,2)))
+  par(mar=c(2,2,2,2))
+  plot(c(100, 345), c(300, 450), type = "n", xlab="", ylab="", xaxt='n', yaxt='n')
+  title('CONFUSION MATRIX for Random Forest', cex.main=2)
+
+  # create the matrix 
+  rect(150, 430, 240, 370, col='#1c6155')
+  text(195, 435, 'No', cex=1.2)
+  rect(250, 430, 340, 370, col='#1c615570')
+  text(295, 435, 'Yes', cex=1.2)
+  text(125, 370, 'Predicted', cex=1.3, srt=90, font=2)
+  text(245, 450, 'Actual', cex=1.3, font=2)
+  rect(150, 305, 240, 365, col='#1c615570')
+  rect(250, 305, 340, 365, col='#1c6155')
+  text(140, 400, 'No', cex=1.2, srt=90)
+  text(140, 335, 'Yes', cex=1.2, srt=90)
+
+  # add in the cm results 
+  res <- as.numeric(cm$table)
+  text(195, 400, res[1], cex=1.6, font=2, col='white')
+  text(195, 335, res[2], cex=1.6, font=2, col='white')
+  text(295, 400, res[3], cex=1.6, font=2, col='white')
+  text(295, 335, res[4], cex=1.6, font=2, col='white')
+
+  # add in the specifics 
+  plot(c(100, 0), c(100, 0), type = "n", xlab="", ylab="", main = "DETAILS", xaxt='n', yaxt='n')
+  text(10, 85, names(cm$byClass[1]), cex=1.2, font=2)
+  text(10, 70, round(as.numeric(cm$byClass[1]), 3), cex=1.2)
+  text(30, 85, names(cm$byClass[2]), cex=1.2, font=2)
+  text(30, 70, round(as.numeric(cm$byClass[2]), 3), cex=1.2)
+  text(50, 85, names(cm$byClass[5]), cex=1.2, font=2)
+  text(50, 70, round(as.numeric(cm$byClass[5]), 3), cex=1.2)
+  text(70, 85, names(cm$byClass[6]), cex=1.2, font=2)
+  text(70, 70, round(as.numeric(cm$byClass[6]), 3), cex=1.2)
+  text(90, 85, names(cm$byClass[7]), cex=1.2, font=2)
+  text(90, 70, round(as.numeric(cm$byClass[7]), 3), cex=1.2)
+
+  # add in the accuracy information 
+  text(30, 35, names(cm$overall[1]), cex=1.5, font=2)
+  text(30, 20, round(as.numeric(cm$overall[1]), 3), cex=1.4)
+  text(70, 35, names(cm$overall[2]), cex=1.5, font=2)
+  text(70, 20, round(as.numeric(cm$overall[2]), 3), cex=1.4)
+}
+
+# Plot the Confusion Matrix
+draw_confusion_matrix_RF(Confusion_Matrix_RF)
+
+```
+
+</center>
+
+> Comments: 
 
 # <span style="color: #1c6155;">Ex 15.3</span> 
 
