--- a/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
+++ b/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
@@ -1411,6 +1411,9 @@ Count_NA <- Count_Before - Count_After
 
 print(paste("We removed", Count_NA, "rows containing NA value"))
 
+# Row name as Cereals name
+row.names(Cereals) <- Cereals$name
+
 ```
 
 ## a. Apply hierarchical clustering to the data using Euclidian distance to the normalized measurements
@@ -1422,6 +1425,7 @@ print(paste("We removed", Count_NA, "rows containing NA value"))
 # Library
 library(FactoMineR)
 library(factoextra)
+library(NbClust)
 
 # Processing Dataset for Hclust
 Scaling <- preProcess(Cereals, method = c("center","scale"))
@@ -1432,9 +1436,10 @@ Distance_Euclidian <- dist(Cereals_Preprocess, method = "euclidean")
 
 # Computing Hierarchical Cluster - Single Linkage
 hc1 <- hclust(Distance_Euclidian, method = "single")
+NClusTer <- Nb
 
 # Optimal K for single linkage on Hierarchical Cluster
-fviz_nbclust(hc1, method = "silhouette") +
+fviz_nbclust(, method = "silhouette") +
   labs(subtitle = "Silhouette method")
 
 optimal_K1 <- 8
@@ -1473,3 +1478,5 @@ fviz_dend(hc2, rect = TRUE, cex = 0.5, k=optimal_K2)
 [How does ties.method argument in R's Rank Function Work?](https://stats.stackexchange.com/questions/34008/how-does-ties-method-argument-of-rs-rank-function-work)
 
 [For hierarchical clustering, how to find the “center” in each cluster in R](https://stackoverflow.com/questions/60643219/for-hierarchical-clustering-how-to-find-the-center-in-each-cluster-in-r)
+
+[Determining The Optimal Number Of Clusters: 3 Must Know Methods](http://www.sthda.com/english/articles/29-cluster-validation-essentials/96-determiningthe-optimal-number-of-clusters-3-must-know-methods/)
