--- a/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
+++ b/DATA_MINING_HW4/DATA_MINING_HW4_LIAM_PHAN.Rmd
@@ -1429,6 +1429,7 @@ set.seed(1)
 
 # Library
 library(cluster)
+library(dendextend)
 
 # Processing Dataset for Hclust
 Scaling <- preProcess(Cereals, method = c("center","scale"))
@@ -1441,13 +1442,18 @@ Distance_Euclidian <- dist(Cereals_Preprocess, method = "euclidean")
 hc1 <- hclust(Distance_Euclidian, method = "single")
 
 ## Plotting
-plot(hc1, hang = -1, ann = TRUE, labels=Cereals_Preprocess$name, cex=0.5, main="Cluster Dendrogram for Single Method")
+plot(hc1, hang = -1, ann = TRUE, labels=Cereals_Preprocess$name, cex=0.5, main="Cluster Dendrogram for Single Method", sub="with 5 Clusters")
+
+# Choosing K
+k1 <- 5
+rect.hclust(hc1, k = k1, border = 2:5)
 
 # Computing Hierarchical Cluster - Complete Linkage --------------
 hc2 <- hclust(Distance_Euclidian, method = "complete")
 
 ## Plotting
-plot(hc2, hang = -1, ann = TRUE, labels=Cereals_Preprocess$name, cex=0.5, main="Cluster Dendrogram for Complete Method")
+plot(hc2, hang = -1, ann = TRUE, labels=Cereals_Preprocess$name, cex=0.5, main="Cluster Dendrogram for Complete Method",sub="with 5 Clusters")
+rect.hclust(hc2, k = k1, border = 2:5)
 
 ```
 
@@ -1458,7 +1464,7 @@ plot(hc2, hang = -1, ann = TRUE, labels=Cereals_Preprocess$name, cex=0.5, main="
 ```{r centroid for single linkage}
 
 ## Centroid Computation 
-clusters1 <- cutree(hc1, k=5)
+clusters1 <- cutree(hc1, k=k1)
 cluster_center1 = aggregate(Cereals_Preprocess[,4:16],list(cluster=clusters1),mean)
 cluster_center1
 
@@ -1470,7 +1476,7 @@ cluster_center1
 ```{r centroid for complete linkage}
 
 ## Centroid Computation 
-clusters2 <- cutree(hc2, k=5)
+clusters2 <- cutree(hc2, k=k1)
 cluster_center2 = aggregate(Cereals_Preprocess[,4:16],list(cluster=clusters2),mean)
 cluster_center2
 
